--- a/about.css
+++ b/about.css
@@ -232,13 +232,14 @@
     }
   }
   
-  /* For screens with a maximum width of 320px */
-  @media (max-width: 320px) {
+  /* For screens with a minmum width of 320px */
+  @media (min-width: 320px) {
     header h1{
       font-size: 2rem;
     }
     main {
       padding: 0.1rem 0.05rem;
+      overflow: hidden;
     }
     .intro-box {
       padding: 0.1rem 0.05rem;
@@ -251,7 +252,7 @@
       font-size: 0.8rem;
     }
     .intro-box p {
-      font-size: 0.6rem;
+      font-size: 1.2rem;
     }
     .btn-group {
       flex-direction: column;
@@ -260,7 +261,7 @@
     }
     .btn-group a {
       margin-bottom: 0rem;
-      font-size: 0.6rem;
+      font-size: 1rem;
     }
     footer{
       margin-top: 1rem;
