--- a/contact.css
+++ b/contact.css
@@ -28,6 +28,9 @@
     header h1 {
       font-size: 2.4rem;
     }
+    nav{
+      margin-top: 1rem;
+    }
     nav a {
       color: var(--text-color);
       margin: 0 1rem;
