--- a/project.css
+++ b/project.css
@@ -26,6 +26,9 @@
     header h1 {
       font-size: 2.4rem;
     }
+    nav{
+      margin-top: 1rem;
+    }
     nav a {
       color: var(--text-color);
       margin: 0 1rem;
